V0.7.4a - Added actions and ribbon on courses. Resolved tile-button issue. Fixed sidebar active color. Fixed course button alignment. Tablet viewport (Buggy)

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -34,6 +34,16 @@ form {
 	padding-top: 7px;
 }
 
+#tiles .box {
+	display: flex;
+	flex-flow: column;
+	height: 100%;
+}
+
+#tiles .subtitle {
+	flex-grow: 1;
+}
+
 /* Desktop Viewport*/
 @media screen and (max-width: 1215px) and (min-width: 1024px) {
 	form {
